--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>760</width>
-    <height>487</height>
+    <width>980</width>
+    <height>595</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Gestion des Clients</string>
+   <string>Gestion des Tickets</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QTabWidget" name="tabWidget">
@@ -19,34 +19,58 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>1011</width>
+      <width>971</width>
       <height>581</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>3</number>
+     <number>0</number>
+    </property>
+    <property name="Modifier les tickets" stdset="0">
+     <string/>
+    </property>
+    <property name="page" stdset="0">
+     <string/>
+    </property>
+    <property name="Page" stdset="0">
+     <string/>
+    </property>
+    <property name="title" stdset="0">
+     <string notr="true"/>
+    </property>
+    <property name="tab_ticket" stdset="0">
+     <string/>
+    </property>
+    <property name="Ajouter une ticket" stdset="0">
+     <string/>
     </property>
     <widget class="QWidget" name="Ajouter">
+     <property name="page" stdset="0">
+      <string/>
+     </property>
+     <property name="Ajouter une ticket" stdset="0">
+      <string/>
+     </property>
      <attribute name="title">
-      <string>Ajouter une ticket</string>
+      <string>Ticket</string>
      </attribute>
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>20</x>
-        <y>20</y>
-        <width>361</width>
-        <height>221</height>
+        <x>10</x>
+        <y>10</y>
+        <width>951</width>
+        <height>421</height>
        </rect>
       </property>
       <property name="title">
-       <string/>
+       <string>Création d'une ticket</string>
       </property>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>40</y>
+         <x>50</x>
+         <y>20</y>
          <width>47</width>
          <height>14</height>
         </rect>
@@ -58,8 +82,8 @@
       <widget class="QLabel" name="label_2">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>80</y>
+         <x>50</x>
+         <y>50</y>
          <width>47</width>
          <height>14</height>
         </rect>
@@ -71,8 +95,8 @@
       <widget class="QLabel" name="label_3">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>150</y>
+         <x>30</x>
+         <y>110</y>
          <width>61</width>
          <height>16</height>
         </rect>
@@ -81,24 +105,11 @@
         <string>Horaire arr</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_4">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>190</y>
-         <width>51</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Num mat</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="label_5">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>110</y>
+         <x>30</x>
+         <y>80</y>
          <width>61</width>
          <height>16</height>
         </rect>
@@ -111,7 +122,7 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>40</y>
+         <y>20</y>
          <width>113</width>
          <height>20</height>
         </rect>
@@ -121,7 +132,7 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>80</y>
+         <y>50</y>
          <width>113</width>
          <height>20</height>
         </rect>
@@ -131,7 +142,7 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>110</y>
+         <y>80</y>
          <width>113</width>
          <height>20</height>
         </rect>
@@ -141,192 +152,30 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>150</y>
+         <y>110</y>
          <width>113</width>
          <height>20</height>
         </rect>
        </property>
       </widget>
-      <widget class="QLineEdit" name="le_Num_mat">
+      <widget class="QPushButton" name="pb_ajouter_4">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>190</y>
-         <width>113</width>
-         <height>20</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="pb_ajouter">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>120</y>
-         <width>75</width>
-         <height>23</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Ajouter</string>
-       </property>
-      </widget>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="Afficher">
-     <attribute name="title">
-      <string>Afficher les tickets</string>
-     </attribute>
-     <widget class="QTableView" name="tab_ticket">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>20</y>
-        <width>551</width>
-        <height>231</height>
-       </rect>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="Supprimer">
-     <attribute name="title">
-      <string>Supprimer les tickets</string>
-     </attribute>
-     <widget class="QGroupBox" name="groupBox_3">
-      <property name="geometry">
-       <rect>
-        <x>50</x>
-        <y>40</y>
-        <width>411</width>
-        <height>181</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string/>
-      </property>
-      <widget class="QLabel" name="label_11">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>30</y>
-         <width>47</width>
-         <height>14</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>ID</string>
-       </property>
-      </widget>
-      <widget class="QLineEdit" name="le_ID_supp">
-       <property name="geometry">
-        <rect>
-         <x>122</x>
-         <y>30</y>
+         <x>104</x>
+         <y>140</y>
          <width>111</width>
-         <height>21</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="pb_supp">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>100</y>
-         <width>75</width>
          <height>23</height>
         </rect>
        </property>
        <property name="text">
-        <string>Supprimer</string>
-       </property>
-      </widget>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="Modifier">
-     <attribute name="title">
-      <string>Modifier les tickets</string>
-     </attribute>
-     <widget class="QGroupBox" name="groupBox_2">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>20</y>
-        <width>421</width>
-        <height>261</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string/>
-      </property>
-      <widget class="QLabel" name="label_6">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>20</y>
-         <width>47</width>
-         <height>14</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>ID</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_7">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>60</y>
-         <width>47</width>
-         <height>14</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Prix</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_8">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>150</y>
-         <width>61</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Horaire arr</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_9">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>200</y>
-         <width>51</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Num mat</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_10">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>100</y>
-         <width>61</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Horaire entr</string>
+        <string>Ajouter une Ticket</string>
        </property>
       </widget>
       <widget class="QLineEdit" name="le_ID_2">
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>20</y>
+         <y>180</y>
          <width>113</width>
          <height>20</height>
         </rect>
@@ -336,17 +185,20 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>60</y>
+         <y>210</y>
          <width>113</width>
          <height>20</height>
         </rect>
+       </property>
+       <property name="Ajouter une ticket" stdset="0">
+        <string/>
        </property>
       </widget>
       <widget class="QLineEdit" name="le_Horaire_entr_2">
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>100</y>
+         <y>240</y>
          <width>113</width>
          <height>20</height>
         </rect>
@@ -356,35 +208,277 @@
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>150</y>
+         <y>270</y>
          <width>113</width>
          <height>20</height>
         </rect>
        </property>
       </widget>
-      <widget class="QLineEdit" name="le_Num_mat_2">
+      <widget class="QPushButton" name="pb_modifier_5">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>200</y>
-         <width>113</width>
-         <height>20</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="pb_modifier">
-       <property name="geometry">
-        <rect>
-         <x>270</x>
-         <y>190</y>
+         <x>50</x>
+         <y>300</y>
          <width>75</width>
          <height>23</height>
         </rect>
        </property>
        <property name="text">
-        <string>Modifier</string>
+        <string>Mettre à jour</string>
        </property>
       </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>180</y>
+         <width>47</width>
+         <height>14</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ID</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_12">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>210</y>
+         <width>47</width>
+         <height>14</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Prix</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_13">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>240</y>
+         <width>61</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Horaire entr</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_14">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>270</y>
+         <width>61</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Horaire arr</string>
+       </property>
+      </widget>
+      <widget class="QTableView" name="tab_ticket_2">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>20</y>
+         <width>421</width>
+         <height>301</height>
+        </rect>
+       </property>
+       <property name="afficher" stdset="0">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pb_supp_2">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>300</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Supprimer</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pb_recherche_ID_2">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>320</y>
+         <width>81</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Recherche ID</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit">
+       <property name="geometry">
+        <rect>
+         <x>430</x>
+         <y>320</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pb_recherche_PRIX_2">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>350</y>
+         <width>91</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Recherche prix</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_2">
+       <property name="geometry">
+        <rect>
+         <x>440</x>
+         <y>350</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pb_recherche_horaire_entr_2">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>380</y>
+         <width>101</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>recherche horaire</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="lineEdit_3">
+       <property name="geometry">
+        <rect>
+         <x>450</x>
+         <y>380</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="on_pb_trier_ticket">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>330</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Tri</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox_7">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>360</y>
+         <width>121</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>par id</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>par prix</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>par horaire</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QPushButton" name="ticketVIP">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>360</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ticket VIP</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pb_QR_code">
+       <property name="geometry">
+        <rect>
+         <x>750</x>
+         <y>330</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>QrCode</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_qrcode">
+       <property name="geometry">
+        <rect>
+         <x>750</x>
+         <y>40</y>
+         <width>181</width>
+         <height>241</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="geometry">
+        <rect>
+         <x>750</x>
+         <y>300</y>
+         <width>201</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="value">
+        <number>24</number>
+       </property>
+      </widget>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>stats</string>
+     </attribute>
+     <widget class="QCustomPlot" name="plot" native="true">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>10</y>
+        <width>721</width>
+        <height>491</height>
+       </rect>
+      </property>
      </widget>
     </widget>
    </widget>
@@ -394,7 +488,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>760</width>
+     <width>980</width>
      <height>22</height>
     </rect>
    </property>
@@ -410,6 +504,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
